--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -132,6 +132,7 @@
   flex-direction: column;
   gap: 1.25rem;
   border-radius: 0.25rem;
+  transition: width 0.7s ease-in-out;
 }
 
 .album__item:hover {
@@ -149,6 +150,11 @@
   background-position: center;
 
   object-fit: cover;
+  transition: transform 0.7s ease-in-out;
+}
+
+.album__cover:hover{
+  transform:scale(1.1);
 }
 
 .album__details {
@@ -201,4 +207,26 @@
 .album__buy--button:hover {
   background-color: var(--color-brand-1);
   border-color: var(--color-brand-1);
+}
+
+
+.drop{
+  animation: 0.7s ease-in-out dropDown;
+}
+
+.slide{
+  animation: 0.7s ease-in-out slideIn;
+}
+
+
+@keyframes dropDown {
+  0% {transform: translateY(-100px)}
+  70%{transform: translateY(10px)}
+  100%{transform: translateY(0)}
+}
+
+@keyframes slideIn {
+  0%{transform: translateX(-100px); opacity: 0}
+  70%{transform: translateX(5px); opacity:1}
+  100%{transform:translateX(0)}
 }
